syntax = "proto3";

package Proto.Message;

message HeartBeatRequest{
    
}

message HeartBeatResponse{

}

message NVector3{
    int32 x = 1;
    int32 y = 2;
    int32 z = 3;
}


enum EntityType
{
    Character = 0;
    Monster = 1;
    NPC = 2;
}



enum EntityState{
    NONE = 0;
    IDLE = 1;
    MOVE = 2;
    JUMP = 3;
    RIDE = 4;
}

message NEntity{
    int32 id = 1;
    NVector3 position = 3;
    NVector3 direction = 4;
    int32 Speed = 5;
}

// 同步消息
message NEntitySync{
    NEntity entity = 1;
    EntityState state = 4;
    bool force = 3;
}

message SpaceEntitySyncRequest{
    NEntitySync entitySync = 1;
}

message SpaceEntitySyncResponse{
    NEntitySync entitySync = 1;
}

message GameEnterRequest{
    int32 characterId = 1;
}

// 加入游戏的响应
message GameEnterResponse{
    bool success = 1;
    NEntity entity = 2;
    NCharacter charater = 3;
}

message SpaceCharaterEnterResponse{
    int32 spaceId = 1;
    repeated NCharacter characterList = 2;
}

message SpaceCharaterLeaveResponse{
    int32 entityId = 1;
}

// 玩家 发给 服务器
message Request{
    UserRegisterRequest userRegister = 1;
    UserLoginRequest userLogin = 2;
}

//服务器 发给 玩家
message Response{
    UserRegisterReponse userRegister = 1;
    UserLoginReponse userLogin = 2;
}

// 玩家注册的请求
message UserRegisterRequest{
    string username = 1;
    string password = 2;
}

// 玩家注册的响应
message UserRegisterReponse{
    int32 code = 1;
    string message = 2;
}

message UserLoginRequest{
    string username = 1;
    string password = 2;
}

message UserLoginReponse{
    bool success = 1;
    int32 code = 2;
    string message = 3;
}

message CharacterCreateRequest{
    string name = 1;
    int32 JobType = 2;
}


message NCharacter{
    int32 id = 1;
    int32 tid = 2;  // 单位类型
    int32 entity_id = 3;
    string name = 4;
    int32 level = 5;
    int64 exp = 6;
    int32 spaceId = 7;
    int64 gold = 8;
    NEntity entity = 9;
    int32 hp = 10;
    int32 mp = 11;
    EntityType entityType = 12;
    repeated SkillInfo Skills = 13;
}

// 技能信息
message SkillInfo
{
    int32 id = 1; // 技能id
}

// 技能释放结果
enum CastResult{
    Success = 0;     // 技能释放成功
    InvalidTarget = 1;  //目标无效
    OutOfRange = 2;   // 超出范围
    OutOfMp = 3;   // MP不足
    Casting = 4;    // 前摇中
    Active = 5;     // 技能已激活
    CoolDown = 6;   // 冷却中
}

//释放信息
message CastInfo{
    int32 casterId = 1;  // 施法者Id
    int32 skillId = 2;   // 技能Id
    int32 targetId = 3;  // 技能释放单位
    NVector3 point = 4;  // 技能释放点位
    CastResult resule= 5; // 技能释放结果
}

message SkillCastRequest{
    CastInfo info = 1;          // 自己放的技能
}

message SkillCastResponse{
    repeated CastInfo list = 1;   // 同场景下多个人释放的技能的列表
}


message CharacterCreateResponse{
    bool success = 1;
    string message = 2;
    NCharacter character = 3;
}

// 查询角色列表的请求
message CharacterListRequest{
}

// 角色列表的响应
message CharacterListResponse{
	repeated NCharacter characterList = 1;
}

// 删除角色的请求
message CharacterDeleteRequest{
	int32 characterId = 1;
}

// 删除角色的响应
message CharacterDeleteResponse{
	bool success = 1;
	string message = 2;
}
